--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1814,3 +1814,26 @@ table.form-table td {
 }
 
  
+.responsive-h2 {
+    font-size: 2rem;
+    line-height: 1.2;
+    text-align: center;
+}
+
+@media (max-width: 600px) {
+    .responsive-h2 {
+        font-size: 1.5rem
+    }
+}
+
+@media (min-width: 601px) and (max-width: 1024px) {
+    .responsive-h2 {
+        font-size: 1.8rem;
+    }
+}
+
+@media (min-width: 1025px) {
+    .responsive-h2 {
+        font-size: 2rem;
+    }
+}
