--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1811,7 +1811,7 @@ table.form-table td {
     align-items: center;
     justify-content: center;
     text-align: center;
-    color: #313133;
+    color: #fff;
     background: #4FD1C5;
     background: linear-gradient(90deg, rgba(129, 230, 217, 1) 0%, rgba(79, 209, 197, 1) 100%);
     border: none;
