sua lai form nhu cau vay von,thay doi cot birth_year ve null

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1906,3 +1906,8 @@ table.form-table td {
         font-size: 2rem;
     }
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
