--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1937,13 +1937,16 @@ input::-webkit-inner-spin-button {
     top: 30%;
     left: 0;
     transform: translateY(-50%);
-    background: linear-gradient(45deg, orange, yellow) !important;
+    
     color: #000;
     font-weight: bold;
     border-radius: 0 5px 5px 0;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
     z-index: 5;
     cursor: move; /* Change cursor to indicate draggable */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 /* Toggle button */
@@ -1955,12 +1958,20 @@ input::-webkit-inner-spin-button {
     padding: 10px;
     border-radius: 0 5px 5px 0;
     font-size: 18px;
+    display: block;
 }
 
 /* Sidebar content */
 #sidebarContent {
+    border-radius: 0 5px 5px 0;
+    width: max-content;
+    position: absolute;
+    top: 46px;
     display: none;
+    background: linear-gradient(45deg, orange, yellow) !important;
+    border: 1px solid #ccc;
     padding: 10px;
+    box-shadow: 0px -1px 9px 16px rgba(0, 0, 0, 0.1);
 }
 
 #sidebarContent a {
